--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -76,7 +76,7 @@
     align-items: center;
     gap: 2rem;
     justify-self: center;
-    transform: translateY(30%);
+
 }
 
 .cart-empty .shop-link {
