--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,6 +3,7 @@ nav {
     max-width: 400px;
     position: absolute;
     transform: translateX(calc(50vw - 200px));
+    
 }
 
 .nav_links {
@@ -40,9 +41,11 @@ nav {
 
 @media (max-width: 600px) {
     nav {
-      padding: 0;
-      transform: translateX(50%);
+        padding: 0;
+        position: relative;
+        transform: translateX(0);
     }
+
     .nav_links {
         gap: 1rem;
     }
