--- a/src/styles/ProductPage.css
+++ b/src/styles/ProductPage.css
@@ -25,6 +25,7 @@
     padding-bottom: 1rem;
     border-bottom: 1px solid grey;
     gap: 2rem;
+    justify-content: center;
 }
 
 .product_img {
